samples/_failures_safe/1761375862_b32271_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e783bebf.c: In function ‘main’:
./samples/SAFE/__tmp_e783bebf.c:164:5: error: expected declaration or statement at end of input
  164 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_e783bebf.c:164:5: error: expected declaration or statement at end of input
